Fixing spacing between nav bar links

--- a/css/main.css
+++ b/css/main.css
@@ -38,9 +38,8 @@ nav ul li {
     display: inline-block;
     margin-right: 20px;
     float: right;
-    top:10px;
-    position: fixed;
     padding-right: 20px;
+    padding-top: 10px;
     
 }
 
